Реализация фильтрации в разметке

--- a/WPF_MVVM/Views/Windows/MainWindow.xaml
+++ b/WPF_MVVM/Views/Windows/MainWindow.xaml
@@ -35,12 +35,19 @@
                     </Grid.ColumnDefinitions>
                     <GroupBox Header="Группы">
                         <DockPanel>
+                            <DockPanel.Resources>
+                                <CollectionViewSource 
+                                    x:Key="GroupsCollection"
+                                    Source="{Binding Groups}"
+                                    Filter="CollectionViewSource_Filter"
+                                    />
+                            </DockPanel.Resources>
                             <DockPanel DockPanel.Dock="Top" Margin="0 3">
                                 <fa:ImageAwesome Height="12" Icon="Solid_Search" Margin="3 0"/>
-                                <TextBox />
+                                <TextBox x:Name="GroupNameFilterText" TextChanged="GroupNameFilterText_TextChanged"/>
                             </DockPanel>
                             <ListBox 
-                                ItemsSource="{Binding Groups}"
+                                ItemsSource="{Binding Source={StaticResource GroupsCollection}}"
                                 DisplayMemberPath="Name"
                                 SelectedItem="{Binding SelectedGroup}"
                                 />
