--- a/WPF_MVVM/Views/Windows/MainWindow.xaml
+++ b/WPF_MVVM/Views/Windows/MainWindow.xaml
@@ -108,20 +108,30 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <GroupBox Header="Директории">
-                        <TreeView ItemsSource="{Binding DiskRootDir.SubDirectories}">
-                            <TreeView.ItemTemplate>
-                                <HierarchicalDataTemplate 
-                                    DataType="{x:Type vm:DirectoryViewModel}"
-                                    ItemsSource="{Binding SubDirectories}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <fa:ImageAwesome Height="12" Width="12" Icon="Regular_Folder" Margin="0 0 5 0" Foreground="Yellow"/>
-                                        <TextBlock
-                                            Text="{Binding Name}"
-                                            ToolTip="{Binding CreationTime}"
-                                            />
-                                    </StackPanel>
-                                </HierarchicalDataTemplate>
-                            </TreeView.ItemTemplate>
+                        <GroupBox.Resources>
+                            <HierarchicalDataTemplate
+                                DataType="{x:Type vm:DirectoryViewModel}"
+                                ItemsSource="{Binding DirectoryItems}">
+                                <StackPanel Orientation="Horizontal">
+                                    <fa:ImageAwesome Height="12" Width="12" Icon="Regular_Folder" Margin="0 0 5 0" Foreground="Yellow"/>
+                                    <TextBlock
+                                        Text="{Binding Name}"
+                                        ToolTip="{Binding CreationTime}"
+                                        />
+                                </StackPanel>
+                            </HierarchicalDataTemplate>
+                            <DataTemplate DataType="{x:Type vm:FileViewModel}">
+                                <StackPanel Orientation="Horizontal">
+                                    <fa:ImageAwesome Height="12" Width="12" Icon="Regular_Folder" Margin="0 0 5 0" Foreground="Blue"/>
+                                    <TextBlock
+                                        Text="{Binding Name}"
+                                        ToolTip="{Binding CreationTime}"
+                                        />
+                                </StackPanel>
+                            </DataTemplate>
+                        </GroupBox.Resources>
+                        <TreeView ItemsSource="{Binding DiskRootDir.DirectoryItems}">
+                            
                         </TreeView>
                     </GroupBox>
                     <GroupBox Grid.Column="1" Header="Файлы">
