--- a/WPF_MVVM/Views/Windows/MainWindow.xaml
+++ b/WPF_MVVM/Views/Windows/MainWindow.xaml
@@ -27,6 +27,9 @@
             
         </StatusBar>
         <TabControl>
+            <TabItem Header="Статистика">
+                
+            </TabItem>
             <TabItem Header="Студенты">
                 <Grid>
                     <Grid.ColumnDefinitions>
