--- a/WPF_MVVM/App.xaml
+++ b/WPF_MVVM/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:WPF_MVVM"
              StartupUri="Views/Windows/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles/GridSplitters.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
