--- a/WPF_MVVM/Views/Windows/MainWindow.xaml
+++ b/WPF_MVVM/Views/Windows/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:vm="clr-namespace:WPF_MVVM.ViewModels"
         xmlns:decanat="clr-namespace:WPF_MVVM.Models.Decanat"
         xmlns:fa="http://schemas.fontawesome.com/icons/"
+        xmlns:view="clr-namespace:WPF_MVVM.Views"
         xmlns:local="clr-namespace:WPF_MVVM"
         Title="{Binding Title}" Height="450" Width="800">
     <Window.DataContext>
@@ -28,7 +29,7 @@
         </StatusBar>
         <TabControl>
             <TabItem Header="Статистика">
-                
+                <view:CountriesStatistic DataContext="{Binding CountriesStatistic}"/>
             </TabItem>
             <TabItem Header="Студенты">
                 <Grid>
