--- a/WPF_MVVM/Resources/Styles/GridSplitters.xaml
+++ b/WPF_MVVM/Resources/Styles/GridSplitters.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="DefaultGridSplitterStyle" TargetType="{x:Type GridSplitter}">
         <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Panel.ZIndex" Value="1000"/>
         <Style.Triggers>
             <Trigger Property="HorizontalAlignment" Value="Stretch">
                 <Setter Property="Height" Value="3"/>
