--- a/WPF_MVVM/Views/CountriesStatistic.xaml
+++ b/WPF_MVVM/Views/CountriesStatistic.xaml
@@ -6,6 +6,7 @@
              xmlns:fa="http://schemas.fontawesome.com/icons/"
              xmlns:vm="clr-namespace:WPF_MVVM.ViewModels"
              xmlns:info="clr-namespace:WPF_MVVM.Models"
+             xmlns:con="clr-namespace:WPF_MVVM.Infrastructure.Converters"
              xmlns:local="clr-namespace:WPF_MVVM.Views"
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance vm:CountriesStatisticViewModel}">
@@ -28,7 +29,7 @@
                         <DataTemplate DataType="{x:Type info:CountryInfo}">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Margin="0 0 3 0" Text="{Binding Name}"/>
-                                <TextBlock Text="{Binding Location}"/>
+                                <TextBlock Text="{Binding Location, Converter={con:LocationPointToStrConverter}, StringFormat=({0})}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
