--- a/WPF_MVVM/Views/Windows/MainWindow.xaml
+++ b/WPF_MVVM/Views/Windows/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:decanat="clr-namespace:WPF_MVVM.Models.Decanat"
         xmlns:fa="http://schemas.fontawesome.com/icons/"
         xmlns:view="clr-namespace:WPF_MVVM.Views"
+        xmlns:con="clr-namespace:WPF_MVVM.Infrastructure.Converters"
         xmlns:local="clr-namespace:WPF_MVVM"
         Title="{Binding Title}" Height="450" Width="800">
     <Window.DataContext>
