--- a/WPF_MVVM/Views/CountriesStatistic.xaml
+++ b/WPF_MVVM/Views/CountriesStatistic.xaml
@@ -7,6 +7,7 @@
              xmlns:vm="clr-namespace:WPF_MVVM.ViewModels"
              xmlns:info="clr-namespace:WPF_MVVM.Models"
              xmlns:con="clr-namespace:WPF_MVVM.Infrastructure.Converters"
+             xmlns:oxy="http://oxyplot.org/wpf"
              xmlns:local="clr-namespace:WPF_MVVM.Views"
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance vm:CountriesStatisticViewModel}">
@@ -43,6 +44,19 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <GridSplitter HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
+                <oxy:Plot>
+                    <oxy:Plot.Axes>
+                        <oxy:LinearAxis Position="Left" Title="Число" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"/>
+                        <oxy:DateTimeAxis Position="Bottom" Title="Дата" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"/>
+                    </oxy:Plot.Axes>
+                    <oxy:LineSeries 
+                        StrokeThickness="2" 
+                        Color="Red"
+                        ItemsSource="{Binding SelectedCountry.Counts}"
+                        DataFieldX="Date"
+                        DataFieldY="Count"
+                        />
+                </oxy:Plot>
             </Grid>
         </GroupBox>
     </Grid>
