--- a/WPF_MVVM/App.xaml
+++ b/WPF_MVVM/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="WPF_MVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm="clr-namespace:WPF_MVVM.ViewModels"
              xmlns:local="clr-namespace:WPF_MVVM"
              StartupUri="Views/Windows/MainWindow.xaml">
     <Application.Resources>
@@ -9,6 +10,9 @@
                 <ResourceDictionary Source="Resources/Base/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/GridSplitters.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <vm:ViewModelLocator x:Key="Locator"/>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
